# cyan-backend

./: .gitignore  Cargo.cyan.backend.toml  Cargo.toml  LICENSE  README.md  build_mac_os_only.sh  build_macos.sh  build_static_lib.diff  build_static_lib.sh  cargo_clean_mac_os_x.sh  integration_design.md  lib_backup.rs  lib_rs_sync_p2p.diff  push_dylib.sh  rustc-ice-2025-10-10T22_11_16-21806.txt  rustc-ice-2025-11-20T00_01_04-68683.txt  rustc-ice-2026-01-07T20_14_53-19139.txt
.cargo/: config.toml
.github/workflows/: rust.yml
cyan-data-0/: cyan.db
cyan-data-0/blobs/: blobs.db
cyan-data-1/: cyan.db
cyan-data-1/blobs/: blobs.db
scripts/: CNAME  cyan-gpu-tunnel.sh  cyan-tunnel.sh  gpu-12xl-retry.sh  gpu-instance.txt  gpu-retry-loop.sh  index.html  kill-gpu.sh  launch-gpu.sh  seed_demo.sh  seed_tos_demo.sh  setup-cyan-gpu.sh
src/: ai_bridge.rs  ai_bridge.rs.patch  board_face_support.patch  cyan_lens_client.rs  diagram_gen.rs  ffi.rs  groups.rs  import_orchestrator.rs  integration_bridge.rs  lens_bridge.rs  lens_commands.rs  lib.rs  objects.rs  pipeline.rs  pipeline_executor.rs  storage.rs  timecode_notes.rs
src/actors/: discovery_actor.rs  mod.rs  network_actor.rs  protocol.md  topic_actor.rs
src/ffi/: core.rs  mod.rs  scaffold.rs
src/models/: commands.rs  core.rs  dto.rs  events.rs  mod.rs  protocol.rs
src/skills/: cyan_dm.rs  email.rs  github.rs  jira.rs  localization.rs  media.rs  mod.rs  qc_fix.rs  slack.rs  ssai.r  ssai.rs
src/skills/src/skills/: ad_splice.rs  localization.rs  mod.rs  qc_fix.rs
src/workspaces/: mod.rs
src/workspaces/ai/: mod.rs
tests/: delta_sync_test.rs  network_actor_test.rs  snapshot_protocol_test.rs  snapshot_test.md
