[package]
name = "cyan_backend"
version = "0.1.0"
edition = "2024"
[lib]
name = "cyan_backend"        # the Rust-side name of the library
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
bytemuck = "1.23.1"
rkyv = "0.8.11"
xaeroid =  { git = "https://github.com/block-xaero/xaeroID.git", branch = "main" }
rusted-ring = "0.5.6"
xaeroflux = { git = "https://github.com/block-xaero/xaeroflux.git", branch = "main" }
once_cell = "1.21.3"
tracing = "0.1.41"
xaeroflux-actors = { path = "../xaeroflux/xaeroflux-actors" }
xaeroflux-core = { path = "../xaeroflux/xaeroflux-core" }
serde = { version = "1.0.219", features = ["derive"] }
hex = "0.4.3"
blake3 = "1.8.2"
