[package]
name = "cyan_backend"
version = "0.1.0"
edition = "2024"
[lib]
name = "cyan_backend"        # the Rust-side name of the library
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
bytemuck = { version = "1.23.1", features = ["derive"] }
rkyv = "0.8.11"
xaeroid =  { path = "../xaeroID" }
rusted-ring = "0.5.6"
xaeroflux = { git = "https://github.com/block-xaero/xaeroflux.git", branch = "main" }
once_cell = "1.21.3"
tracing = "0.1.41"
xaeroflux-actors = { path = "../xaeroflux/xaeroflux-actors" }
xaeroflux-core = { path = "../xaeroflux/xaeroflux-core" }
serde = { version = "1.0.219", features = ["derive"] }
hex = "0.4.3"
blake3 = "1.8.2"
tracing-subscriber = "0.2.25"
rand = "0.8.5"

ark-std = "0.5.0"
ark-ff = "0.5.0"
ark-relations = "0.5.1"
ark-r1cs-std = "0.5.0"
ark-groth16 = "0.5.0"
ark-bn254 = "0.5.0"
ark-serialize = "0.5.0"
ark-snark = "0.5.1"
ark-crypto-primitives = { version = "0.5.0", features = ["crh", "r1cs"] }

