[package]
name = "cyan-backend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]


[dependencies]
xaeroid = { path = "../xaeroid" }
cyan-backend-integrations = {path = "../cyan-backend-integrations"}
tokio = { version = "1.40", features = ["full"] }
once_cell = "1.20"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
uuid = { version = "1.11", features = ["v4"] }
chrono = "0.4"
anyhow = "1.0"
bytes = "1.7"
futures = "0.3"
rand = "0.8"

# Iroh dependencies
iroh = "0.95"
iroh-gossip = "0.95"
iroh-blobs = "0.97"

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand_chacha = "0.9.0"
iroh-relay = "0.95.1"
time = "0.3.44"
hex = "0.4.3"